--- a/src/Components/Results/Results.css
+++ b/src/Components/Results/Results.css
@@ -1,6 +1,7 @@
 .results-img-display {
   display: flex;
   justify-content: space-evenly;
+  margin-top: 3%;
 }
 .phrase-header {
   display: flex;
@@ -19,3 +20,69 @@
   cursor: pointer;
 }
 
+.placeholder-flag {
+  filter: grayscale(100%);
+  width: 10vw;
+}
+
+.emoji-img-placeholder{
+  width: 10vw;
+  /* background-color: grey; */
+}
+.plus-btn {
+  font-size: 50px;
+}
+
+.flag-display {
+  display: grid;
+  text-align: center;
+}
+
+.emoji-display-placeholder {
+  display: grid;
+  text-align: center;
+}
+
+.advance-btn {
+  width: 100px;
+  height: 50px; 
+  margin-top: 5%;
+  background: rgb(244, 244, 48);
+  border-radius: 5px;
+  cursor: pointer;
+}
+.advance-btn:hover {
+  opacity: 80%;
+  border: red;
+}
+
+hr {
+  margin-top: 3%;;
+}
+
+li {
+  border-radius: 3px;
+  padding: 25px 30px;
+  display: flex;
+  background-color: #ffffff;
+  box-shadow: 0px 0px 9px 0px rgba(0,0,0,0.1);
+  margin-top: 10px; 
+}
+
+.favorite-btn {
+  width: 2em;
+  height: 2em;
+  margin-left: 2em;
+  margin-top: 1em;
+}
+
+.list-display {
+  display: grid;
+  justify-content: center;
+}
+
+.phrase-header {
+  display: flex;
+  justify-content: space-evenly;
+  margin-top: 3%;
+}
