--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -1,7 +1,12 @@
 .header-container {
   display: flex;
   justify-content: space-between;
-  height: 10vh;
+  height: 70px;
   /* border: 3px solid green; */
   background-color: rgb(244, 244, 48)
+}
+
+.header-sub-text {
+  font-size: 1em;
+  margin-top: 45px;
 }
