--- a/src/Components/Translation/Translation.css
+++ b/src/Components/Translation/Translation.css
@@ -1,7 +1,7 @@
 .table-translations {
   display: grid;
   justify-content: center;
-  margin-top: 20vh;
+  margin-top: 10vh;
 }
 
 .result-div {
@@ -18,5 +18,20 @@
   display: grid;
   justify-content: center;
   margin-top: 20vh;
+}
 
+.translation-btns {
+  display: flex;
+  justify-content: center;
+}
+
+.favorite {
+  width: 100px;
+  height: 40px; 
+  margin-top: 5%;
+  background: rgb(244, 244, 48);
+  border-radius: 5px;
+  cursor: pointer;
+  margin-left: 30px;
+  box-shadow: 0px 0px 9px 0px rgba(0,0,0,0.1);
 }
