--- a/src/Components/Translation/Translation.css
+++ b/src/Components/Translation/Translation.css
@@ -13,8 +13,18 @@
   font-size: 1em;
 }
 
+.error-text {
+  text-align: center;
+  margin-top: 10%;
+}
+
 .translation-list-item {
   display: grid;
+}
+
+.error-display {
+  display: flex;
+  justify-content: center;
 }
 
 .centered-flag {
@@ -49,4 +59,19 @@
   cursor: pointer;
   margin-left: 30px;
   box-shadow: 0px 0px 9px 0px rgba(0,0,0,0.1);
+}
+
+.favorite-error {
+  width: 100px;
+  height: 40px; 
+  margin-top: 45%;
+  background: rgb(244, 244, 48);
+  border-radius: 5px;
+  cursor: pointer;
+  margin-left: 30px;
+  box-shadow: 0px 0px 9px 0px rgba(0,0,0,0.1);
+}
+
+.error-div {
+  margin-top: 10%;
 }
