--- a/src/Components/Results/Results.css
+++ b/src/Components/Results/Results.css
@@ -54,7 +54,7 @@
 .advance-btn:hover {
   opacity: 80%;
   border: 2px solid black;
-  transition-duration: 300ms;
+  /* transition-duration: 300ms; */
 }
 
 hr {
